[package]
name = "tcalc-rustyline"
version = "1.0.1"
authors = ["Katsu Kawakami <kkawa1570@gmail.com>", "Dustin Brown <dubrowgn@gmail.com>"]
description = "A fork of Rustyline for use specifically with tcalc"
documentation = "https://github.com/dubrowgn/rustyline"
repository = "https://github.com/dubrowgn/rustyline"
readme = "README.md"
keywords = ["readline", "tcalc"]
license = "MIT"

[dependencies]
libc = "0.2.7"
unicode-width = "0.1.3"
encode_unicode = "0.1.3"

[target.'cfg(unix)'.dependencies]
nix = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
tempdir = "0.3.4"
